--- a/src/sass/sections/_tone-and-urgency.scss
+++ b/src/sass/sections/_tone-and-urgency.scss
@@ -119,7 +119,7 @@
         color: $dark-color;
         &:before {
             content: '';
-            background: url('../../icons/info.svg') center center/cover no-repeat;
+            background: url('../icons/info.svg') center center/cover no-repeat;
             display: block;
             position: absolute;
             top: 50%;
