--- a/src/sass/sections/_your-order.scss
+++ b/src/sass/sections/_your-order.scss
@@ -29,7 +29,7 @@
             top: 50%;
             transform: translateY(-50%);
             left: -35px;
-            background: url('../../icons/clipboard.svg') center center/cover no-repeat;
+            background: url('../icons/clipboard.svg') center center/cover no-repeat;
             width: 25px;
             height: 25px;
         }
@@ -93,7 +93,7 @@
                 transform: translateY(-50%);
                 width: 35px;
                 height: 35px;
-                background: url('../../icons/lifebuoy.svg') center center/cover no-repeat;
+                background: url('../icons/lifebuoy.svg') center center/cover no-repeat;
             }
         }
         &__descr {
