fix some mistakes

--- a/src/sass/sections/_your-order.scss
+++ b/src/sass/sections/_your-order.scss
@@ -43,6 +43,7 @@
     &__subtitle {
         font-size: 14px;
         text-transform: uppercase;
+        font-weight: 600;
     }
     &__text-info {
         font-size: 14px;
